@@ -126,6 +126,7 @@ updelay: 0 ms
 downdelay: 0 ms
 lacp_status: negotiated
 lacp_fallback_ab: false
+active-backup primary: <none>
 active slave mac: 00:00:00:00:00:00(none)
 
 slave p1: disabled
@@ -292,6 +293,7 @@ updelay: 0 ms
 downdelay: 0 ms
 lacp_status: negotiated
 lacp_fallback_ab: false
+active-backup primary: <none>
 
 slave p0: enabled
   may_enable: true
@@ -308,6 +310,7 @@ updelay: 0 ms
 downdelay: 0 ms
 lacp_status: negotiated
 lacp_fallback_ab: false
+active-backup primary: <none>
 
 slave p2: enabled
   may_enable: true
@@ -431,6 +434,7 @@ updelay: 0 ms
 downdelay: 0 ms
 lacp_status: negotiated
 lacp_fallback_ab: false
+active-backup primary: <none>
 <active slave mac del>
 
 slave p0: disabled
@@ -449,6 +453,7 @@ updelay: 0 ms
 downdelay: 0 ms
 lacp_status: negotiated
 lacp_fallback_ab: false
+active-backup primary: <none>
 <active slave mac del>
 
 slave p2: disabled
@@ -565,6 +570,7 @@ updelay: 0 ms
 downdelay: 0 ms
 lacp_status: negotiated
 lacp_fallback_ab: false
+active-backup primary: <none>
 <active slave mac del>
 
 slave p0: disabled
@@ -583,6 +589,7 @@ updelay: 0 ms
 downdelay: 0 ms
 lacp_status: negotiated
 lacp_fallback_ab: false
+active-backup primary: <none>
 <active slave mac del>
 
 slave p2: disabled
@@ -704,6 +711,7 @@ updelay: 0 ms
 downdelay: 0 ms
 lacp_status: negotiated
 lacp_fallback_ab: false
+active-backup primary: <none>
 <active slave mac del>
 
 slave p0: enabled
@@ -722,6 +730,7 @@ updelay: 0 ms
 downdelay: 0 ms
 lacp_status: negotiated
 lacp_fallback_ab: false
+active-backup primary: <none>
 <active slave mac del>
 
 slave p2: enabled
