@@ -26,6 +26,8 @@ Post-v2.13.0
      * New configuration knob 'other_config:lb-output-action' for bond ports
        that enables new datapath action 'lb_output' to avoid recirculation
        in balance-tcp mode.  Disabled by default.
+     * New configuration knob 'other_config:bond-primary' for AB bonds
+       that specifies interface will be the preferred port if it is active.
    - Tunnels: TC Flower offload
      * Tunnel Local endpoint address masked match are supported.
      * Tunnel Romte endpoint address masked match are supported.
